(4.2.5p210) 2009/09/06 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1294] Use OPENSSL_INC and OPENSSL_LIB macros for Windows
  and remove unnecessary reference to applink.c for Windows
* [Bug 1295] trap directive options are not optional.
* [Bug 1297] yylex() must always set yylval before returning.
(4.2.5p209) 2009/09/01 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1290] Fix to use GETTIMEOFDAY macro
* [Bug 1289] Update project files for VC6, VS2003, VS2005, VS 2008
(4.2.5p208) 2009/08/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1293] make configuration dumper ready for release, specifically:
* rename ntpq dumpcfg command to "saveconfig".
* require authentication for saveconfig.
* "restrict ... nomodify" prevents saveconfig and :config.
* "saveconfig ." shorthand to save to startup configuration file.
* support strftime() substitution in saveconfig arg to timestamp
  the output filename, for example "saveconfig %Y%m%d-%H%M%S.conf".
* display saveconfig response message from ntpd in ntpq.
* save output filename in "savedconfig" variable, fetched with ntpq -c
  "rv 0 savedconfig".
* document saveconfig in html/ntpq.html.
* add ./configure --disable-saveconfig to build a smaller ntpd.
* log saveconfig failures and successes to syslog.
(4.2.5p207) 2009/08/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1292] Minor Windows source tweaks for VC6-era SDK headers.
(4.2.5p206) 2009/08/26 Released by Harlan Stenn <stenn@ntp.org>
* accopt.html typo fixes from Dave Mills.
* [Bug 1283] default to remembering KoD in sntp.
* clean up numerous sntp/kod_management.c bugs.
* use all addresses resolved from each DNS name in sntp.
(4.2.5p205) 2009/08/18 Released by Harlan Stenn <stenn@ntp.org>
* accopt.html typo fixes from Dave Mills.
* [Bug 1285] Log ntpq :config/config-from-file events.
* [Bug 1286] dumpcfg omits statsdir, mangles filegen.
(4.2.5p204) 2009/08/17 Released by Harlan Stenn <stenn@ntp.org>